# stair-perception

./: CMakeLists.txt  LICENSE  README.md  param.yaml
images/: 0000_cloud.pcd
include/: common.h  config.h
modules/gui/: CMakeLists.txt  gui.cpp  gui.h  gui.ui
modules/gui/test/: CMakeLists.txt  gui_test.cpp  gui_test.h
modules/imu/: CMakeLists.txt  imu_data_decode.c  imu_data_decode.h  packet.c  packet.h  serial.c  serial.h
modules/k2g/: CMakeLists.txt  k2g.cpp  k2g.h
modules/sender/: CMakeLists.txt  sender.cpp  serial_class.h
modules/stairperception/: CMakeLists.txt  Stair.hpp  StairPerception.cpp  StairPerception.hpp  voxel_grid_indices.h  voxel_grid_indices.hpp
samples/: 0000_imu.txt  0001_cloud.pcd  0001_imu.txt
test/: CMakeLists.txt  controller.cpp  controller.h  main.cpp  processor.cpp  processor.h  reader.cpp  reader.h
